--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    /* background-color: aqua; */
+    background-color: darkslategray;
+}
+canvas {
+    width: 100%;
+    height: 100vh;
 }
